[package]
name = "warmup_project"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
prettytable = "0.10.0"
